--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="icon" href="images/cassetete.webp" type="image/x-icon">
     <title>Portfolio Timothée Van Den Bosch</title>
-    
+
 </head>
 
 <body>
@@ -23,8 +23,8 @@
                     <div id="flip_div">
                         <div id="div_moi">
                             <a href="index ">
-                                <img src="images/Photo_Pro_avecOutline.webp" alt="Photo de profil de Timothée Van Den Bosch"
-                                id="moi">
+                                <img src="images/Photo_Pro_avecOutline.webp"
+                                    alt="Photo de profil de Timothée Van Den Bosch" id="moi">
                             </a>
                         </div>
                         <div id="div_cassetete">
@@ -144,7 +144,8 @@
                                         <div>
                                             <img src="images/ferrari_icon.svg" alt="Logo voiture ferrari"
                                                 loading="lazy">
-                                            <p class="nav_links projectsOverview">Fond d'écran 3D "Ferrari Portofino"</p>
+                                            <p class="nav_links projectsOverview">Fond d'écran 3D "Ferrari Portofino"
+                                            </p>
                                         </div>
                                     </li>
                                 </ul>
@@ -154,7 +155,7 @@
                     <li>
                         <div>
                             <ion-icon name="school-sharp"></ion-icon>
-                            <a href="formation " class="nav_links">Formations & Expériences</a>
+                            <a href="about-me" class="nav_links">À propos de moi</a>
                         </div>
                     </li>
                     <li>
@@ -163,12 +164,7 @@
                             <a href="contact " class="nav_links">Contacts</a>
                         </div>
                     </li>
-                    <li>
-                        <div>
-                            <ion-icon name="reader-outline"></ion-icon>
-                            <a href="mentions-legales " class="nav_links">Mentions Légales</a>
-                        </div>
-                    </li>
+
                 </ol>
             </nav>
         </div>
@@ -306,12 +302,10 @@
                 <h5>Liens Utiles</h5>
                 <ul>
                     <li>
-                        <a href="projects">Projects</a>
-                        <a href="formation">Formations & Expériences</a>
+                        <a href="about-me">À propos de moi</a>
                     </li>
 
                     <li>
-                        <a href="contact">Formulaire de Contact</a>
                         <a href="mentions-legales">Mentions Légales</a>
                     </li>
                 </ul>
