--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                         <div>
                             <ion-icon name="layers"></ion-icon>
                             <p id="link_projects" class="projectsFilter">Projects</p>
-                            <ion-icon id="ion_icon_projects" name="chevron-down-outline"></ion-icon>
+                            <ion-icon id="ion_icon_projects" name="chevron-forward-outline"></ion-icon>
                         </div>
-                        <ul id="Projects_container">
+                        <!-- <ul id="Projects_container">
                             <li class="container_links">
                                 <div>
                                     <ion-icon name="code-slash"></ion-icon>
@@ -184,12 +184,12 @@
                                     </li>
                                 </ul>
                             </li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li>
                         <div>
                             <ion-icon name="school-sharp"></ion-icon>
-                            <a href="formation " class="nav_links">Formations & Expériences</a>
+                            <a href="about-me" class="nav_links">À propos de moi</a>
                         </div>
                     </li>
                     <li>
@@ -198,12 +198,7 @@
                             <a href="contact " class="nav_links">Contacts</a>
                         </div>
                     </li>
-                    <li>
-                        <div>
-                            <ion-icon name="reader-outline"></ion-icon>
-                            <a href="mentions-legales " class="nav_links">Mentions Légales</a>
-                        </div>
-                    </li>
+
                 </ol>
             </nav>
         </div>
@@ -390,12 +385,9 @@
                 <h5>Liens Utiles</h5>
                 <ul>
                     <li>
-                        <a href="projects">Projects</a>
-                        <a href="formation">Formations & Expériences</a>
+                        <a href="about-me">À propos de moi</a>
                     </li>
-
                     <li>
-                        <a href="contact">Formulaire de Contact</a>
                         <a href="mentions-legales">Mentions Légales</a>
                     </li>
                 </ul>
