--- a/index.html
+++ b/index.html
@@ -352,6 +352,83 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="year">
+                    <div class="timeline"></div>
+                    <div class="left-line infos-1"></div>
+                    <div class="animTranslateLeft infos-1">
+                        <div class="left">
+                            <h3>Mai - Juillet 2024</h3>
+                            <ul>
+                                <p>Premier Stage Chez «La Cissonière» :</p>
+                                <li>Création d'un site web vitrine</li>
+                                <li>HTML, CSS, Javascript, PHP, MySQL</li>
+                                <li>Back office intégré pour modifier le site web</li>
+                                <li><a href="https://lacissoniere.fr">https://lacissoniere.fr</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="right-line infos-2"></div>
+                    <div class="animTranslateRight infos-2">
+                        <div class="right ">
+                            <h3>Septembre 2023 </h3>
+                            <ul>
+                                <li>Arrivée à MyDigitalSchool Lyon, étudiant Développeur Web</li>
+                                <li>Au top du classement de l'école de Mydigitalschool Lyon lors de My Creative Week</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="left-line infos-3"></div>
+                    <div class="animTranslateLeft infos-3">
+                        <div class="left">
+                            <h3>Juillet 2023</h3>
+                            <ul>
+                                <li>Bac Général</li>
+                                <li>Spécialité NSI & Maths</li>
+                                <li>Certification Informatique PIX</li>
+                                <li>Saisonnier dans la Drôme « Vergers
+                                    les brunots » - 3 semaines</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="right-line infos-4"></div>
+                    <div class="animTranslateRight infos-4">
+                        <div class="right">
+                            <h3>2022</h3>
+                            <p>Création d'un site web avec GitHub en
+                                Markdown - Lycée</p>
+                        </div>
+    
+                    </div>
+                </div>
+            </section>
+            <section class="formContact">
+                <form action="https://formspree.io/f/mgveyaor" method="POST">
+                    <h3>Contactez-moi !</h3>
+                    <div id="div_form">
+                        <div class="form-group">
+                            <label>
+                                <p>Votre Email :<span class="orange">*</span></p>
+                                <input type="email" name="email" placeholder="Contact@gmail.com" required>
+                            </label>
+                        </div>
+                        <div class="form-group">
+    
+                            <label>
+                                <p>Votre numéro de Téléphone : (facultatif)</p>
+                                <input type="phone" name="phone" placeholder="0123456789">
+                            </label>
+                        </div>
+                        <div class="form-group">
+                            <label>
+                                <p>Votre Message :<span class="orange">*</span></p>
+                                <textarea name="message" placeholder="Votre Message" required></textarea>
+                            </label>
+                        </div>
+                        <button type="submit">Envoyer</button>
+                    </div>
+                </form>
+            </section>
     </main>
     <footer>
         <div class="infos_footer">
