GSAP cards Added

--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
                     et ainsi les liés au code pour en faire des véritables merveilles !</p>
             </div>
         </section> -->
-            <section>
+            <section id="aboutMe">
                 <div class="animTranslateLeft">
-                    <h2 class="vague">À propos de moi</h2>
+                    <h2>À propos de moi</h2>
                     <p>
                         J'ai découvert ma passion pour le développement en classe de Première grâce à la spécialité NSI,
                         où
@@ -334,13 +334,17 @@
                     </p>
                 </div>
             </section>
-            <section>
-                <h2 class="vague">Mes compétences</h2>
+            <section id="skillsPC">
+                <h2>Mes compétences</h2>
                 <ul id="skills_cards"></ul>
+            </section>
+            <section id="skillsMobile">
+                <h2>Mes compétences</h2>
+                <ul id="skills_sentences"></ul>
             </section>
             <section>
                 <div>
-                    <h2 class="vague">Quelques projets</h2>
+                    <h2>Quelques projets</h2>
                     <div id="actu_projects">
                         <ul id="preview_cards"></ul>
                         <p class="justButton projectsFilter">Découvrir plus !</p>
