--- a/index.html
+++ b/index.html
@@ -335,6 +335,8 @@
             <p>Tous droits réservés</p>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script type="module" src="JS/main.min.js"></script>
     <script type="module" src="JS/CODE3D.min.js"></script>
     <script src="JS/gestion3d.min.js"></script>
