--- a/index.html
+++ b/index.html
@@ -183,13 +183,21 @@
                 </div>
             </div>
         </section>
-        <section id="skillsPC">
+        <section class="skillsPC">
             <h2>Mes compétences</h2>
             <ul id="skills_cards"></ul>
         </section>
-        <section id="skillsMobile">
+        <section class="skillsMobile">
             <h2>Mes compétences</h2>
             <ul id="skills_sentences"></ul>
+        </section>
+        <section class="skillsPC">
+            <h2>Actuellement en apprentissage de :</h2>
+            <ul id="learnSkills_cards"></ul>
+        </section>
+        <section class="skillsMobile">
+            <h2>Actuellement en apprentissage de :</h2>
+            <ul id="learnSkills_sentences"></ul>
         </section>
         <section>
             <h2>À propos de moi</h2>
@@ -337,7 +345,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script type="module" src="JS/main.min.js"></script>
+    <script type="module" src="JS/main.js"></script>
     <script type="module" src="JS/CODE3D.min.js"></script>
     <script src="JS/gestion3d.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
