--- a/index.html
+++ b/index.html
@@ -203,15 +203,19 @@
             <h2>À propos de moi</h2>
             <div id="aboutMe" class="animTranslateLeft">
                 <p>
-                    J'ai découvert ma passion pour le développement en classe de Première grâce à la spécialité NSI,
-                    où
-                    j'ai réalisé mon premier vrai site web sur le jeu Minecraft en Markdown.
+                    Étudiant et Apprenti Développeur Full Stack
                 </p>
                 <p>
-                    Aujourd'hui étudiant à MyDigitalSchool Lyon, je me forme en développement. En parallèle, je
-                    maîtrise Blender en
-                    autodidacte, liant la modélisation 3D à mes projets de développement pour créer des expériences
-                    immersives et innovantes.
+                Actuellement étudiant à MyDigitalSchool Lyon, je me forme afin de devenir développeur full stack. Je suis actuellement en apprentissage de React, GSAP et Laravel via le cursus de mon école. Je suis tout autant passionné par le développement front que le back, avec toutefois une préférence pour le front, notamment avec JavaScript.
+                </p>
+                <p>
+                J'ai effectué mon premier stage chez La Cissonière, où j'ai participé à la conception de leur site web en intégrant un back-office (HTML/CSS/JS/PHP/MySQL) : https://lacissoniere.fr.
+                </p>
+                <p>
+                J'ai découvert ma passion pour le développement en classe de Première au lycée grâce à la spécialité NSI, où j'ai réalisé mon premier véritable site web sur le jeu Minecraft en Markdown.
+                </p>
+                <p>
+                En parallèle, je maîtrise Blender en autodidacte, alliant la modélisation 3D à mes projets de développement pour créer des expériences immersives et innovantes.
                 </p>
             </div>
         </section>
