--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 Actuellement étudiant à MyDigitalSchool Lyon, je me forme afin de devenir développeur full stack. Je suis actuellement en apprentissage de React, GSAP et Laravel via le cursus de mon école. Je suis tout autant passionné par le développement front que le back, avec toutefois une préférence pour le front, notamment avec JavaScript.
                 </p>
                 <p>
-                J'ai effectué mon premier stage chez La Cissonière, où j'ai participé à la conception de leur site web en intégrant un back-office (HTML/CSS/JS/PHP/MySQL) : https://lacissoniere.fr.
+                J'ai effectué mon premier stage chez La Cissonière, où j'ai participé à la conception de leur site web en intégrant un back-office (HTML/CSS/JS/PHP/MySQL) : <a href="https://lacissoniere.fr" target="_blank">https://lacissoniere.fr</a>.
                 </p>
                 <p>
                 J'ai découvert ma passion pour le développement en classe de Première au lycée grâce à la spécialité NSI, où j'ai réalisé mon premier véritable site web sur le jeu Minecraft en Markdown.
