Update: CV + Techs, projects Added

--- a/quantixH3D.html
+++ b/quantixH3D.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.min.css">
-    <link rel="stylesheet" href="CSS/model3D.min.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/model3D.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@1,500&family=Galindo&display=swap"
@@ -37,8 +37,8 @@
                     <div id="flip_div">
                         <div id="div_moi">
                             <a href="index ">
-                                <img src="images/Photo_Pro_avecOutline.webp" alt="Photo de profil de Timothée Van Den Bosch"
-                                id="moi">
+                                <img src="images/Photo_Pro_avecOutline.webp"
+                                    alt="Photo de profil de Timothée Van Den Bosch" id="moi">
                             </a>
                         </div>
                         <div id="div_cassetete">
@@ -108,6 +108,21 @@
                             <span class="button-text">Blender 3D</span>
                             <input type="checkbox" value="Blender" id="Blender_input" class="input_filter_tags" />
                         </label>
+                        <label class="custom-button React">
+                            <span class="button-text">React.js</span>
+                            <input type="checkbox" value="React.js" id="React.js_input"
+                                class="input_filter_tags" />
+                        </label>
+                        <label class="custom-button Next">
+                            <span class="button-text">Next.js</span>
+                            <input type="checkbox" value="Next.js" id="Next.js_input"
+                                class="input_filter_tags" />
+                        </label>
+                        <label class="custom-button Tailwind_CSS">
+                            <span class="button-text">Tailwind CSS</span>
+                            <input type="checkbox" value="Tailwind CSS" id="Tailwind_CSS_input"
+                                class="input_filter_tags" />
+                        </label>
                         <label class="custom-button In-Progress">
                             <span class="button-text">In Progress</span>
                             <input type="checkbox" value="In-Progress" id="In-Progress_input"
@@ -131,10 +146,14 @@
             </div>
             <h2 class="vague">Projet de Partiel n°2</h2>
             <div class="animTranslateLeft">
-                <p>Ce modèle 3D représente une maison futuriste, conçu dans le cadre du projet Quantix Horizon. Cette maison inclut un bunker et des panneaux solaires, intégrés pour refléter les valeurs de durabilité et d'innovation du projet.</p>
+                <p>Ce modèle 3D représente une maison futuriste, conçu dans le cadre du projet Quantix Horizon. Cette
+                    maison inclut un bunker et des panneaux solaires, intégrés pour refléter les valeurs de durabilité
+                    et d'innovation du projet.</p>
                 <h3>Visualisation du Modèle 3D - Quantix Horizon :</h3>
-                <p>Vous pouvez générer le modèle 3D de la maison futuriste ci-dessous. Le temps de chargement peut varier de quelques secondes à 1 minute en fonction de votre appareil.</p>
-                <p>Il est possible de manipuler le modèle en cliquant et en glissant votre curseur ou doigt sur la maison, ainsi qu'en zoomant.</p>
+                <p>Vous pouvez générer le modèle 3D de la maison futuriste ci-dessous. Le temps de chargement peut
+                    varier de quelques secondes à 1 minute en fonction de votre appareil.</p>
+                <p>Il est possible de manipuler le modèle en cliquant et en glissant votre curseur ou doigt sur la
+                    maison, ainsi qu'en zoomant.</p>
             </div>
             <div class="animTranslateLeft">
                 <div id="div_quantixH3D" style="display: block; position: relative;">
@@ -208,12 +227,12 @@
                 <h5>Liens Utiles</h5>
                 <ul>
                     <li>
-                         
+
                         <p class="orangeLink projectsFilter">Projets</p>
                     </li>
 
                     <li>
-                         
+
                         <a href="mentions-legales">Mentions Légales</a>
                     </li>
                 </ul>
@@ -225,8 +244,8 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.js"></script>
     <script type="module" src="JS/main.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
