--- a/montagne3D.html
+++ b/montagne3D.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.min.css">
-    <link rel="stylesheet" href="CSS/model3D.min.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/model3D.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@1,500&family=Galindo&display=swap"
@@ -92,6 +92,21 @@
                         <label class="custom-button Blender">
                             <span class="button-text">Blender 3D</span>
                             <input type="checkbox" value="Blender" id="Blender_input" class="input_filter_tags" />
+                        </label>
+                        <label class="custom-button React">
+                            <span class="button-text">React.js</span>
+                            <input type="checkbox" value="React.js" id="React.js_input"
+                                class="input_filter_tags" />
+                        </label>
+                        <label class="custom-button Next">
+                            <span class="button-text">Next.js</span>
+                            <input type="checkbox" value="Next.js" id="Next.js_input"
+                                class="input_filter_tags" />
+                        </label>
+                        <label class="custom-button Tailwind_CSS">
+                            <span class="button-text">Tailwind CSS</span>
+                            <input type="checkbox" value="Tailwind CSS" id="Tailwind_CSS_input"
+                                class="input_filter_tags" />
                         </label>
                         <label class="custom-button In-Progress">
                             <span class="button-text">In Progress</span>
@@ -218,9 +233,9 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script type="module" src="JS/main.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.js"></script>
+    <script type="module" src="JS/main.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>  
 </body>
