Medium-Update: Bills-Manager added

--- a/index.html
+++ b/index.html
@@ -136,13 +136,11 @@
                         </label>
                         <label class="custom-button React">
                             <span class="button-text">React.js</span>
-                            <input type="checkbox" value="React.js" id="React.js_input"
-                                class="input_filter_tags" />
+                            <input type="checkbox" value="React.js" id="React.js_input" class="input_filter_tags" />
                         </label>
                         <label class="custom-button Next">
                             <span class="button-text">Next.js</span>
-                            <input type="checkbox" value="Next.js" id="Next.js_input"
-                                class="input_filter_tags" />
+                            <input type="checkbox" value="Next.js" id="Next.js_input" class="input_filter_tags" />
                         </label>
                         <label class="custom-button Tailwind_CSS">
                             <span class="button-text">Tailwind CSS</span>
@@ -221,16 +219,23 @@
                     Étudiant et Apprenti Développeur Full Stack
                 </p>
                 <p>
-                Actuellement étudiant à MyDigitalSchool Lyon, je me forme afin de devenir développeur full stack. Je suis actuellement en apprentissage de React, GSAP et Laravel via le cursus de mon école. Je suis tout autant passionné par le développement front que le back, avec toutefois une préférence pour le front, notamment avec JavaScript.
+                    Actuellement étudiant à MyDigitalSchool Lyon, je me forme afin de devenir développeur full stack. Je
+                    suis actuellement en apprentissage de Next/React, Prisma et GSAP.Je suis
+                    tout autant passionné par le développement front que le back, avec toutefois une préférence pour le
+                    front, notamment avec JavaScript.
                 </p>
                 <p>
-                J'ai effectué mon premier stage chez La Cissonière, où j'ai participé à la conception de leur site web en intégrant un back-office (HTML/CSS/JS/PHP/MySQL) : <a href="https://lacissoniere.fr" target="_blank">https://lacissoniere.fr</a>.
+                    J'ai effectué mon premier stage chez La Cissonière, où j'ai participé à la conception de leur site
+                    web en intégrant un back-office (HTML/CSS/JS/PHP/MySQL) : <a href="https://lacissoniere.fr"
+                        target="_blank">https://lacissoniere.fr</a>.
                 </p>
                 <p>
-                J'ai découvert ma passion pour le développement en classe de Première au lycée grâce à la spécialité NSI, où j'ai réalisé mon premier véritable site web sur le jeu Minecraft en Markdown.
+                    J'ai découvert ma passion pour le développement en classe de Première au lycée grâce à la spécialité
+                    NSI, où j'ai réalisé mon premier véritable site web sur le jeu Minecraft en Markdown.
                 </p>
                 <p>
-                En parallèle, je maîtrise Blender en autodidacte, alliant la modélisation 3D à mes projets de développement pour créer des expériences immersives et innovantes.
+                    En parallèle, je maîtrise Blender en autodidacte, alliant la modélisation 3D à mes projets de
+                    développement pour créer des expériences immersives et innovantes.
                 </p>
             </div>
         </section>
@@ -240,36 +245,35 @@
                 <div class="left-line infos-1"></div>
                 <div class="animTranslateLeft infos-1">
                     <div class="left">
-                        <h3>Mai - Juillet 2024</h3>
+                        <h3>2025</h3>
                         <ul>
-                            <p>Premier Stage Chez «La Cissonière» :</p>
-                            <li>Création d'un site web vitrine</li>
-                            <li>HTML, CSS, Javascript, PHP, MySQL</li>
-                            <li>Back office intégré pour modifier le site web</li>
-                            <li><a href="https://lacissoniere.fr">https://lacissoniere.fr</a></li>
+                            <li>Création d'un outil de gestion de factures "Bills-Manager" en une semaine + découverte de Next.js</li>
+                            <li>Projet Sonar2Text</li>
                         </ul>
                     </div>
                 </div>
                 <div class="right-line infos-2"></div>
                 <div class="animTranslateRight infos-2">
                     <div class="right ">
-                        <h3>Septembre 2023 </h3>
+                        <h3>2024</h3>
                         <ul>
-                            <li>Arrivée à MyDigitalSchool Lyon, étudiant Développeur Web</li>
-                            <li>Au top du classement de l'école de Mydigitalschool Lyon lors de My Creative Week</li>
+                            <li>Premier Stage Chez «La Cissonière» 2 mois :</li>
+                            <li>Création d'un site web vitrine</li>
+                            <li>Vanilla : HTML, CSS, Javascript, PHP, MySQL</li>
+                            <li>Back office intégré pour modifier le site web</li>
+                            <li><a href="https://lacissoniere.fr">https://lacissoniere.fr</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="left-line infos-3"></div>
                 <div class="animTranslateLeft infos-3">
                     <div class="left">
-                        <h3>Juillet 2023</h3>
+                        <h3>2023</h3>
                         <ul>
-                            <li>Bac Général</li>
-                            <li>Spécialités NSI & Maths</li>
+                            <li>Obtention du Bac Général - Spécialités NSI & Maths</li>
                             <li>Certification Informatique PIX</li>
-                            <li>Saisonnier dans la Drôme « Vergers
-                                les brunots » - 3 semaines</li>
+                            <li>Arrivée à MyDigitalSchool Lyon, étudiant Développeur Web</li>
+                            <li>Au top du classement de l'école de Mydigitalschool Lyon lors de My Creative Week</li>
                         </ul>
                     </div>
                 </div>
@@ -277,8 +281,12 @@
                 <div class="animTranslateRight infos-4">
                     <div class="right">
                         <h3>2022</h3>
-                        <p>Création d'un site web avec GitHub en
-                            Markdown - Lycée</p>
+                        <ul>
+                            <li>Lycée</li>
+                            <li>Découverte de Python & Algorithmie et HTML/CSS/JS</li>
+                            <li>Création d'un site web avec GitHub en
+                                Markdown</li>
+                        </ul>
                     </div>
 
                 </div>
@@ -368,7 +376,7 @@
     <script type="module" src="JS/CODE3D.js"></script>
     <script src="JS/gestion3d.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>  
+    <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
