--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@1,500&family=Galindo&display=swap"
         rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="icon" href="images/cassetete.webp" type="image/x-icon">
     <title>Portfolio Timothée Van Den Bosch</title>
     <script type="importmap">
@@ -37,10 +40,8 @@
             window.ih = window.innerHeight;
         }
 
-        // Redimensionne le canvas à la taille de la fenêtre actuelle
         resizeCanvas();
 
-        // Ajoute un écouteur d'événements pour redimensionner le canvas lorsque la fenêtre change de taille
         window.addEventListener('resize', resizeCanvas);
     </script>
 
@@ -86,7 +87,6 @@
                         <div>
                             <ion-icon name="layers"></ion-icon>
                             <p id="link_projects" class="projectsFilter">Projets</p>
-                            <ion-icon id="ion_icon_projects" name="chevron-forward-outline"></ion-icon>
                         </div>
                     </li>
                     <li>
@@ -247,7 +247,8 @@
                     <div class="left">
                         <h3>2025</h3>
                         <ul>
-                            <li>Création d'un outil de gestion de factures "Bills-Manager" en une semaine + découverte de Next.js</li>
+                            <li>Création d'un outil de gestion de factures "Bills-Manager" en une semaine + découverte
+                                de Next.js</li>
                             <li>Projet Sonar2Text</li>
                         </ul>
                     </div>
@@ -299,20 +300,21 @@
                     <div class="form-group">
                         <label>
                             <p>Votre Email :<span class="orange">*</span></p>
-                            <input type="email" name="email" placeholder="Contact@gmail.com" required>
+                            <input type="email" class="form_input" name="email" placeholder="Contact@gmail.com"
+                                required>
                         </label>
                     </div>
                     <div class="form-group">
 
                         <label>
                             <p>Téléphone (facultatif) : </p>
-                            <input type="phone" name="phone" placeholder="0123456789">
+                            <input type="phone" class="form_input" name="phone" placeholder="0123456789">
                         </label>
                     </div>
                     <div class="form-group">
                         <label>
                             <p>Votre Message :<span class="orange">*</span></p>
-                            <textarea name="message" placeholder="Votre Message" required></textarea>
+                            <textarea name="message" class="form_input" placeholder="Votre Message" required></textarea>
                         </label>
                     </div>
                     <button type="submit">Envoyer</button>
